test: make Phase 18 CI deterministic across environments
Co-authored-by: Cursor <cursoragent@cursor.com>